--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,9 @@
 * {
     font-family: 'Manrope', sans-serif;
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    margin: 0 210px;
+}
