--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,9 @@
 * {
-    font-family: 'Manrope', sans-serif;
+    font-family: "Manrope", sans-serif;
+}
+
+body {
+    margin: 0;
 }
 
 .container {
