--- a/styles/add_variant.css
+++ b/styles/add_variant.css
@@ -1,17 +1,17 @@
 .add_variant-title {
-    color: rgba(49,53,59,0.96);
+    color: rgba(49, 53, 59, 0.96);
     font-weight: bold;
 }
+
 .box {
     display: block;
     position: relative;
     margin: 16px;
     padding: 35px;
     border-radius: 8px;
-    box-shadow: 0 1px 6px 0 var(--color-shadow,rgba(49,53,59,0.12));
-    background-color: var(--color-card,#FFFFFF);
+    box-shadow: 0 1px 6px 0 var(--color-shadow, rgba(49, 53, 59, 0.12));
+    background-color: var(--color-card, #ffffff);
     cursor: default;
-    
 }
 
 .form-box {
@@ -37,43 +37,43 @@
 
 #fileToUpload {
     align-items: center;
-    color: rgba(49,53,59,0.68);
+    color: rgba(49, 53, 59, 0.68);
 }
 
 .form-box .search-box {
     display: flex;
     align-items: center;
     padding: 0 10px;
-    color: #FFEACC;
+    color: #ffeacc;
     border-radius: 5px;
     margin-top: 5px;
-    border: 1px solid #41B54A;
+    border: 1px solid #41b54a;
 }
 
 .form-box .harga-box {
     display: flex;
     position: relative;
     align-items: center;
-    color: #FFEACC;
+    color: #ffeacc;
     border-radius: 5px;
     margin-top: 5px;
-    border: 1px solid #41B54A;
+    border: 1px solid #41b54a;
 }
 
 .form-box .deskripsi-box {
     display: flex;
     align-items: center;
-    color: #FFEACC;
+    color: #ffeacc;
     border-radius: 5px;
     margin-top: 5px;
 }
 
 .label {
     margin-block-start: 1em;
-    margin-block-end: .4em;
-    color: rgba(49,53,59,0.68);
+    margin-block-end: 0.4em;
+    color: rgba(49, 53, 59, 0.68);
     font-weight: bold;
-    font-size: .9rem;
+    font-size: 0.9rem;
 }
 
 .form-box input {
@@ -94,11 +94,10 @@
     margin-left: 5px;
 }
 
-
 .inter {
     width: 400px;
     height: 40px;
-    background: #41B54A;
+    background: #41b54a;
     border-radius: 10px;
     color: #fff;
     cursor: pointer;
@@ -110,7 +109,8 @@
     margin-left: 20px;
 }
 
-.inter:hover, .inter:focus {
+.inter:hover,
+.inter:focus {
     outline: none;
 }
 
@@ -124,14 +124,14 @@
     -webkit-box-align: center;
     align-items: center;
     padding-left: 12px;
-    background-color: var(--color-chip-disabled,#F3F4F5);
-    color: var(--color-text-low,rgba(49,53,59,0.68));
+    background-color: var(--color-chip-disabled, #f3f4f5);
+    color: var(--color-text-low, rgba(49, 53, 59, 0.68));
     padding-right: 12px;
 }
 
 /*Untuk hide arrow*/
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
