--- a/styles/register.css
+++ b/styles/register.css
@@ -36,7 +36,7 @@ body {
     margin-bottom: 15px;
 }
   
-.inter {
+.inter, .inter-disabled {
     width: 300px;
     height: 40px;
     background: #41B54A;
@@ -48,6 +48,11 @@ body {
     border: none;
     font-weight: bold;
     font-size: medium;
+}
+
+.inter-disabled {
+    background: rgba(49,53,59,0.4);
+    cursor: not-allowed;
 }
 
 .inter:hover, .inter:focus {
@@ -111,6 +116,14 @@ body {
     margin-block-end: 0em;
     font-size: .8rem;
     color: #d8414a;
+    display: none;
+}
+
+.input-success {
+    margin-block-start: .7em;
+    margin-block-end: 0em;
+    font-size: .8rem;
+    color: #41B54A;
     display: none;
 }
 
