--- a/styles/purchase.css
+++ b/styles/purchase.css
@@ -79,9 +79,10 @@
 .purchase-form {
     display: flex;
     justify-content: flex-end;
+    align-items: center;
 }
 
 .purchase-form input {
-    width: 20%;
+    width: 30%;
     outline: 1px solid #45b54a;
 }
