--- a/styles/detail.css
+++ b/styles/detail.css
@@ -72,6 +72,28 @@
     transition-duration: 0.2s;
 }
 
+.detail-info .admin button {
+    border: none;
+    color: #FCFEFF;
+    width: 35%;
+    padding: 8px 0;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    cursor: pointer;
+    transition-duration: 0.2s;
+}
+
+.detail-info .admin #Edit button {
+    border:none;
+    background-color: #45b54a;
+}
+.detail-info .admin #Delete button {
+    border:none;
+    background-color: #d8414a;
+}
+
 .detail-info button:hover {
     opacity: 0.75;
     transition-duration: 0.2s;
