--- a/styles/list.css
+++ b/styles/list.css
@@ -1,1 +1,20 @@
+.flex-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
+
+.admin #add_var button {
+    border: none;
+    background-color: #45b54a;
+    color: #FCFEFF;
+    width: 120%;
+    padding: 8px 0;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+    cursor: pointer;
+    transition-duration: 0.2s;
+}
