--- a/styles/login.css
+++ b/styles/login.css
@@ -34,6 +34,8 @@ body {
 
 #login-title {
     margin-bottom: 15px;
+    color: rgba(49, 53, 59, 0.96);
+    font-weight: bold;
 }
   
 .inter, .inter-disabled {
