--- a/styles/purchase.css
+++ b/styles/purchase.css
@@ -26,6 +26,10 @@
     justify-content: space-between;
 }
 
+#amount-row-container {
+    justify-content: space-between;
+}
+
 .purchase-name {
     font-weight: bold;
     font-size: 1.5em;
