--- a/styles/global.css
+++ b/styles/global.css
@@ -4,7 +4,7 @@
 
 body {
     margin: 0;
-    overflow-y: scroll
+    overflow-y: scroll;
 }
 
 .container {
@@ -22,6 +22,11 @@ body {
 
 .subtitle {
     color: #757575;
+}
+
+.jumbotron {
+    margin-top: 50px;
+    transition-duration: 0.5s;
 }
 
 .page-header {
